--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <nav>
+        <!-- Test -->
         <div class="navigation container">
             <div class="logo">
                <img src = "C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\logo.png" alt="logo">
