--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Test -->
         <div class="navigation container">
             <div class="logo">
-               <img src = "C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\logo.png" alt="logo">
+               <img src = "https://raw.githubusercontent.com/kumari01/restaurant/main/logo.png" alt="logo">
             </div>
             <div class="bar-icon">
                 <i class="fa-solid fa-bars"></i>
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="hero">
             <div class="hero_img">
-                <img src ="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\hero_image.png" alt="hero img">
+                <img src ="https://raw.githubusercontent.com/kumari01/restaurant/main/hero_image.png" alt="hero img">
             </div>
             <div class="hero_content">
                 <div class="tag">50% Off New Users </div>
@@ -37,7 +37,7 @@
     <div>
         <div class="cards">
             <div class="card">
-                <img src ="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\logo\discount.png" alt="Discount">
+                <img src ="https://raw.githubusercontent.com/kumari01/restaurant/main/discount.png" alt="Discount">
                 <div class="card1-p">
                     <h4 class="card2-h4">
                         Discount Voucher
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src ="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\logo\fresh.png" alt="Discount">
+                <img src ="https://raw.githubusercontent.com/kumari01/restaurant/main/fresh.png" alt="Discount">
                 <div class="card2-p">
                     <h4 class="card2-h4">
                         Fresh Healthy Food
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src ="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\logo\delivery.png" alt="Discount">
+                <img src ="https://raw.githubusercontent.com/kumari01/restaurant/main/delivery.png" alt="Discount">
                 <div class="card3-p">
                     <h4 class="card3-h4">
                         Fresh Healthy Food
@@ -79,32 +79,32 @@
         <h2>Explore Our Menu</h2>
         <div class="grid">
             <div class="item1">
-                <img class="grid_img"src="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\grid_image1.png">
+                <img class="grid_img"src="https://raw.githubusercontent.com/kumari01/restaurant/main/grid_image1.png">
             </div>
             <div class="item2">
-                <img class="grid_img" src="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\grid_image2.png">
+                <img class="grid_img" src="https://raw.githubusercontent.com/kumari01/restaurant/main/grid_image2.png">
             </div>
             <div class="item3">
-                <img class="grid_img" src="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\grid_image3.png">
+                <img class="grid_img" src="https://raw.githubusercontent.com/kumari01/restaurant/main/grid_image3.png">
             </div>
             <div class="item4">
-                <img class="grid_img" src="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\grid_image4.png">
+                <img class="grid_img" src="https://raw.githubusercontent.com/kumari01/restaurant/main/grid_image4.png">
             </div>
             <div class="item5">
-                <img class="grid_img" src="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\grid_image5.png">
+                <img class="grid_img" src="https://raw.githubusercontent.com/kumari01/restaurant/main/grid_image5.png">
             </div>
             <div class="item6">
-                <img class="grid_img" src="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\grid_image6.png">
+                <img class="grid_img" src="https://raw.githubusercontent.com/kumari01/restaurant/main/grid_image6.png">
             </div>
             <div class="item7">
-                <img class="grid_img" src="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\grid_image7.png">
+                <img class="grid_img" src="https://raw.githubusercontent.com/kumari01/restaurant/main/grid_image7.png">
             </div>
         </div>
     </div>
     <footer>
         <div class="footer_container container">
             <div class="footer_logo">
-                <img src ="C:\Users\DIGITAL LIBRARY\Desktop\webdev\project3\image\logo.png">
+                <img src ="https://raw.githubusercontent.com/kumari01/restaurant/main/logo.png">
             </div>
             <div class="link_list">
                 <h3>Main Links</h3>
@@ -142,6 +142,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="copy">
+            &copy; All copy rights are reserved
         </div>
     </footer>
 </body>
